# poule

./: .clang-format  .gitignore  README.md  main.c  meson.build  pool.c  pool.h  queue.c  queue.h
examples/: map.c  meson.build  pi.c
include/poule/: pool.h  ppool.h  tpool.h
src/: main.c  meson.build  pool.c  pool.h  ppool.c  queue.c  queue.h  tpool.c
test/: meson.build  test_queue.c
